# OderingSystem

./: CMakeLists.txt  技术文档.md  架构设计思想.md
src/: main.cpp
src/controllers/: system_engine.cpp  system_engine.h
src/models/: dish.cpp  dish.h  member.cpp  member.h  order.cpp  order.h  queue.cpp  queue.h
src/views/: UI设计思想.md  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
